# comic-parser

./: .gitignore  404.html  Comic-parser.pyproj  Comic-parser.sln  LICENSE.txt  README.md  comic-parser.sln  index.html  mkdocs.yml  pyproject.toml  setup.py
comicParser/: comic-parser.pyproj  comicParser.pyproj
docs/: README.md  index.md  reference.md  usage.md
reference/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/reference/: index.html
site/search/: search_index.json
site/usage/: index.html
src/: __init__.py  comic-parser.pyproj  comic-parser.sln  comicParser.py  comicParser.sln  main.py
src/comic-parser/: comic-parser.py  comic-parser.pyproj
src/comicBuilder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/comicParser/: __init__.py  __main__.py  comicParser.py  comicParser.pyproj  main.py
src/comic_parser/: __init__.py  __main__.py  comic_parser.py
src/comic_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
test/: test.py  test.pyproj
usage/: index.html
