[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comic-parser"
version = "1.1"
description = "Python utility for build comics"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Pablo Alvarez Lopez", email = "pablo@alvarezlopez.com" }
]

keywords = [
    "comic", 
    "pdf"
]

dependencies = [
    "img2pdf", 
    "pillow",
    "typing_extensions"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pikepdf"
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]"
]

[project.urls]
"Bug Tracker" = "https://github.com/palvarezlopez/comic-parser/issues"
Documentation = "https://github.com/palvarezlopez/comic-parser"
"Source Code" = "https://github.com/palvarezlopez/comic-parser"

[project.scripts]
comic-parser = "comic_parser:run_parser"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=0.26.1",
]
